[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Dictionnaire.gd" type="Script" id=1]

[node name="Dictionnaire" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.062
anchor_top = 0.107
anchor_right = 0.937
anchor_bottom = 0.84
margin_left = 0.511997
margin_top = -0.199997
margin_right = 0.512024
margin_bottom = -3.05176e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 0

[node name="SaveButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -208.0
margin_top = -20.0
margin_right = -16.0
margin_bottom = 20.0
text = "Sauvegarder!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = 16.0
margin_top = -20.0
margin_right = 208.0
margin_bottom = 20.0
text = "Importer!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -192.0
margin_right = 288.0
margin_bottom = 192.0
access = 2
current_dir = "/Users/xavie/Documents/Godot/Kracnodar"
current_path = "/Users/xavie/Documents/Godot/Kracnodar/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportDialog" type="FileDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -192.0
margin_right = 288.0
margin_bottom = 192.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users"
current_file = "Users"
current_path = "/Users/Users"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="dir_selected" from="SaveDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="ImportDialog" to="." method="_on_ImportDialog_file_selected"]
